[gd_scene load_steps=3 format=3 uid="uid://cchlfqbh0djdn"]

[ext_resource type="Script" path="res://addons/cyclops_level_builder/docks/material_palette/material_viewer/material_groups_tree.gd" id="1_u4dlj"]
[ext_resource type="PackedScene" uid="uid://b510d4yme5xtx" path="res://addons/cyclops_level_builder/docks/material_palette/material_viewer/create_material_dialog.tscn" id="2_adfk6"]

[node name="MatGroupTree" type="Tree"]
unique_name_in_owner = true
columns = 2
script = ExtResource("1_u4dlj")

[node name="PopupMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
item_count = 3
item_0/text = "New Group"
item_0/id = 0
item_1/text = "Delete Group"
item_1/id = 1
item_2/text = "Rename"
item_2/id = 2

[node name="CreateMaterialDialog" parent="." instance=ExtResource("2_adfk6")]
unique_name_in_owner = true
visible = false

[connection signal="button_clicked" from="." to="." method="_on_button_clicked"]
[connection signal="item_edited" from="." to="." method="_on_item_edited"]
[connection signal="item_selected" from="." to="." method="_on_item_selected"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="create_material" from="CreateMaterialDialog" to="." method="_on_create_material_dialog_create_material"]
